# dvault

./: hardhat.config.ts  package-lock.json  package.json
frontend/: .env  .firebaserc  .gitignore copy  firebase.json  index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/assets/img/: token_list.json
frontend/public/assets/styles/: fonts.css
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/_components/: index.ts
frontend/src/_components/button/: index.ts
frontend/src/_components/deposit/: AmountsIn.tsx  LimitsTypes.ts  RecipientWalletAddress.tsx  RecipientWalletAddressTypes.ts  TotalFees.tsx  TotalFeesTypes.ts  UnlockCriteria.tsx  WithdrawalLimits.tsx  amounts-in.scss  index.ts  total-fees.scss  unlock-criteria.scss
frontend/src/_components/document/: index.ts
frontend/src/_components/send/: AmountsInTypes.ts  TotalFees.tsx  TotalFeesTypes.ts  UnlockCriteria.tsx  UnlockCriteriaTypes.ts  index.ts  recipient-wallet-address.scss  unlock-criteria.scss
frontend/src/_helpers/: Cryptography.ts  api.ts  arrayUtils.ts  constants.ts  easingFunctions.ts  eventBus.ts  index.ts  snippets.ts
frontend/src/_pages/: index.ts
frontend/src/_router/: Routes.tsx
frontend/src/_types/: PageRFCProps.ts  index.ts
sol-vault/: Anchor.toml  package.json
sol-vault/programs/vault/: Cargo.toml
sol-vault/rust-service/: Cargo.toml
sol-vault/rust-service/src/: main.rs
sol-vault/vaultcoin/: package.json
solana/: Anchor.toml  Cargo.toml  getrandom_custom.rs  package.json
solana/.cargo/: config.toml
solana/app/: package.json
solana/app/src/: App.tsx  main.tsx
solana/programs/cellar/: Cargo.toml
solana/programs/cellar/src/: lib.rs
solana/programs/cellar/src/instructions/: mod.rs  token_account.rs  transaction_account.rs  transaction_item_account.rs  user_account.rs  vault_account.rs  vault_tracker_account.rs
solana/programs/commons/: Cargo.toml
solana/programs/commons/src/: lib.rs
solana/programs/debank/: Cargo.toml
solana/programs/debank/src/: lib.rs
solana/programs/puppet/: Cargo.toml
solana/programs/puppet-master/: Cargo.toml
solana/programs/puppet-master/src/: lib.rs
solana/programs/puppet/src/: lib.rs
solana/programs/teller/: Cargo.toml
solana/programs/teller/src/: lib.rs
solana/tests/: app.test.ts
solana/tests/accounts/: ConfidentialTransfers.ts  TokenAccount.ts  TransactionAccount.ts  TransactionItemAccount.ts  UserAccount.ts  VaultAccount.ts  VaultTrackerAccount.ts
solana/tests/programs/: ProgramInstructions.ts
solana/tests/solana/: Airdrops.ts
src/: App.css  App.tsx  VaultDashboard.tsx  index.css
src/components/: SmartContractActionButtonList.tsx
src/contract-configs/: vault.config.ts
src/contracts/: vault.sol
src/helpers/: deploy.ts  deployer-helper.ts
wallet/: index.html  package.json  test.txt
wallet/hardhat3/: package.json
wallet/hardhat3/hardhat3/: package-lock.json  package.json
wallet/src/: App.tsx
wallet/src/components/: ActionButtonList.tsx  InfoList.tsx
wallet/src/config/: wagmi.config.ts
wallet/src/helpers/: snippets.ts  trusted.js
wallet/src/tests/: vault.test.ts
wallet/src/types/: global.d.ts
(+75 files in other folders)
