[workspace]
members = [
    "programs/puppet",
    "programs/puppet-master",
    "programs/debank",
    "programs/cellar",
    "programs/teller",
    "programs/commons",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
getrandom = { version = "0.2", features = ["custom"] }
