[package]
name = "cellar"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cellar"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
commons = { path = "../commons", features = ["cpi"]}
serde = { version = "1.0", features = ["derive"] }
password-encryptor = "=2.0.0"
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"]}
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git"}
cryptoxide = "0.5.1"
soft-aes = "=0.2.2"
serde_json = "1.0"
digest = "0.10.7"
bincode = "2.0.1" 
sha2 = "0.10.8"
borsh = "1.5.0"
hex = "0.4.3"
