[package]
name = "commons"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "commons"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-getrandom = ["getrandom/custom"]

[dependencies]
#anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", features = ["init-if-needed"]}
anchor-lang = "0.31.1"
uuid = { version = "1.4", features = ["v4"], default-features = false }
sha2 = "0.10"
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git"}
getrandom = { version = "0.2", features = ["custom"] }
